# sonic-buildimage

./: .artifactignore  .gitignore  .gitmodules  123.patch  LICENSE  MAINTAINERS  Makefile  Makefile.cache  Makefile.work  README.buildsystem.md  README.md  ThirdPartyLicenses.txt  azure-pipelines.yml  build_debian.sh  build_debug_docker_j2.sh  build_docker.sh  build_image.sh  build_kvm_image.sh  check_install.py  dbg_files.sh  functions.sh  get_deps.sh  get_docker-base.sh  install_sonic.py  onie-image-arm64.conf  onie-image-armhf.conf  onie-image.conf  onie-mk-demo.sh  push_docker.sh  slave.mk  update_screen.sh
.azure-pipelines/: azure-pipelines-Official.yml  azure-pipelines-UpgrateVersion.yml  azure-pipelines-build-ubuntu-2004.yml  azure-pipelines-build.yml  azure-pipelines-download-certificate.yml  azure-pipelines-image-template.yml  azure-pipelines-job-groups.yml  azure-pipelines-repd-build-variables.yml  build-commonlib.yml  build-template.yml  check-dirty-version.yml  cleanup.yml  docker-sonic-mgmt-legacy.yml  docker-sonic-mgmt-py3-only.yml  docker-sonic-mgmt.yml  docker-sonic-slave-arm64.yml  docker-sonic-slave-armhf.yml  docker-sonic-slave-template.yml  docker-sonic-slave.yml  dpkg-cache-cleanup.yml  official-build-cache.yml  official-build-cisco-8000.yml  official-build-multi-asic.yml  official-build.yml  run-test-scheduler-template.yml  run-test-template.yml  template-clean-sonic-slave.yml  template-commonlib.yml  template-daemon.yml  template-skipvstest.yml  template-variables.yml  trigger-publish-artifacts-build.yml  vstest-exclude  vstest-include
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  issue_template.md  labeler.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  automerge.yml  automerge_scan.yml  codeql-analysis.yml  label.yml  (+2 more)
docker-bgp/: Dockerfile
docker-database/: Dockerfile
docker-fpm/: Dockerfile
docker-lldp/: Dockerfile
docker-mlnx-sswsyncd/: Dockerfile
docker-mlnx-sswsyncd-rpc/: Dockerfile
docker-orchagent/: Dockerfile  start.sh
docker-platform-monitor/: Dockerfile
docker-ptf/: Dockerfile
docker-snmp/: Dockerfile
docker-sswsyncd/: Dockerfile
docker-syncd/: Dockerfile  start.sh
docker-syncd-mlnx/: Dockerfile
docker-vas/: Dockerfile  user-override
dockers/: docker-orchagent-mlnx  dockerfile-macros.j2
installer/: default_platform.conf  install.sh  sharch_body.sh
rules/: asyncsnmp-py3.dep  asyncsnmp-py3.mk  bash.dep  bash.mk  config  dbsyncd-py2.dep  dbsyncd-py2.mk  dbsyncd-py3.dep  dbsyncd-py3.mk  debootstrap.dep  debootstrap.mk  dhcp6relay.dep  dhcp6relay.mk  dhcpmon.dep  dhcpmon.mk  dhcprelay.dep  dhcprelay.mk  docker-base-bullseye.dep  docker-base-bullseye.mk  docker-base-buster.dep  docker-base-buster.mk  docker-base-stretch.dep  docker-base-stretch.mk  docker-base.dep  docker-base.mk  docker-config-engine-bullseye.dep  docker-config-engine-bullseye.mk  docker-config-engine-buster.dep  docker-config-engine-buster.mk  docker-config-engine-stretch.dep  docker-config-engine-stretch.mk  docker-config-engine.dep  docker-config-engine.mk  docker-database.dep  docker-database.mk  docker-dhcp-relay.dep  docker-dhcp-relay.mk  docker-dhcp-server.dep  docker-dhcp-server.mk  docker-eventd.dep  (+264 more)
scripts/: build-optimize-fs-size.py  build_debian_base_system.sh  build_kvm_image.sh  build_mirror_config.sh  collect_build_version_files.sh  collect_docker_version_files.sh  collect_host_image_version_files.sh  convert-pfx-cert-format.sh  dbg_files.sh  docker_version_control.sh  efi-sign.sh  generate_buildinfo_config.sh  populate_file_web_server.py  prepare_debian_image_buildinfo.sh  prepare_docker_buildinfo.sh  prepare_slave_container_buildinfo.sh  process_log.sh  run_with_retry  secure_boot_signature_verification.sh  sign_image.sh  sign_image_dev.sh  signing_kernel_modules.sh  signing_secure_boot_dev.sh  versions_manager.py  wait_for_docker.sh
sonic-mgmt/: Dockerfile
sonic-slave/: Dockerfile  Dockerfile.j2
sonic-slave-bullseye/: Dockerfile.j2  Dockerfile.user.j2  apt-multiple-retries  disable-non-manylinux.patch
sonic-slave-buster/: Dockerfile.j2  Dockerfile.user.j2
sonic-slave-jessie/: Dockerfile.j2  Dockerfile.user.j2  no-check-valid-until
sonic-slave-stretch/: Dockerfile  Dockerfile.j2  Dockerfile.user.j2
src/: Makefile
src/iccpd/: Makefile  configure.ac
src/iccpd/debian/: changelog  control  rules
src/iccpd/debian/DEBIAN/: control
src/iccpd/include/: app_csm.h  cmd_option.h  iccp_cli.h  iccp_cmd.h  iccp_cmd_show.h  iccp_consistency_check.h  iccp_csm.h  iccp_ifm.h  iccp_netlink.h  logger.h  mlacp_fsm.h  mlacp_link_handler.h  mlacp_sync_prepare.h  mlacp_sync_update.h  mlacp_tlv.h  msg_format.h  openbsd_tree.h  port.h  scheduler.h  system.h
src/iccpd/src/: Makefile  Makefile.am  app_csm.c  cmd_option.c  iccp_cli.c  iccp_cmd.c  iccp_cmd_show.c  iccp_consistency_check.c  iccp_csm.c  iccp_ifm.c  iccp_main.c  iccp_netlink.c  logger.c  mlacp_fsm.c  mlacp_link_handler.c  mlacp_sync_prepare.c  mlacp_sync_update.c  openbsd_tree.c  port.c  scheduler.c  system.c
src/iccpd/src/mclagdctl/: Makefile  Makefile.am  mclagdctl.c  mclagdctl.h
src/tacacs/bash_tacplus/: Makefile.am  bash_tacplus.c  configure.ac
src/tacacs/bash_tacplus/debian/: bash-tacplus.postinst  changelog  control  rules
src/tacacs/bash_tacplus/unittest/: Makefile.am  mock_helper.c  mock_helper.h  plugin_test.c
(+10930 files in other folders)
